# research-engine

./: .gitignore  CLAUDE.md  README.md  demo.py  pyproject.toml  ui.py
.claude/: context.md  state.jsonl
.claude/agents/: engine-agent.md  falsification-agent.md  meta-agent.md  transforms-agent.md
.claude/commands/: create-agent.md  start.md
.claude/skills/coordination/: SKILL.md
.claude/skills/cortex/: SKILL.md
.claude/skills/criticism/: SKILL.md
.claude/skills/information-theory/: SKILL.md
.claude/skills/invariance-metrics/: SKILL.md
.claude/skills/planning/: SKILL.md
.claude/skills/transformation-design/: SKILL.md
.claude/templates/: agent.md.tmpl  skill.md.tmpl
src/invariant/: __init__.py  cli.py
src/invariant/core/: __init__.py  orchestrator.py
src/invariant/models/: __init__.py  schemas.py
src/invariant/providers/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  openai_provider.py  semantic.py  stats.py
src/invariant/store/: __init__.py  experiment.py
src/invariant/utils/: __init__.py  info_theory.py
tests/: __init__.py  test_core.py  test_info_theory.py
