[project]
name = "invariant"
version = "0.1.0"
description = "Epistemological engine: test hypothesis survival under admissible transformations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "torch>=2.0",
    "pydantic>=2.0",
    "networkx>=3.0",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.2",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
invariant = "invariant.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
